[package]
name = "libpkgbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pkgbuild"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sys-mount = "2.0.2"
